# MotionMindAI

./: .gitignore  Dockerfile  MotionMind.slnx  README.md  telegram_bot.py
.github/workflows/: ci.yml
MotionMind.Api/: DatabaseInitializer.cs  MotionMind.Api.csproj  MotionMind.Api.http  Program.cs  appsettings.json
MotionMind.Api/Controllers/: LessonPlanController.cs
MotionMind.Api/Models/: GenerateLessonRequest.cs
MotionMind.Api/Properties/: launchSettings.json
MotionMind.Core/: Class1.cs
MotionMind.Core/Entities/: Exercise.cs  Instructor.cs  LessonPlan.cs
MotionMind.Core/Interfaces/: IAIGenerationService.cs  ILessonPlanRepository.cs
MotionMind.Infrastructure/: Class1.cs  MotionMind.Infrastructure.csproj
MotionMind.Infrastructure/Data/: ApplicationDbContext.cs  LessonPlanRepository.cs
MotionMind.Infrastructure/Services/: GeminiAIGenerationService.cs  MockAIGenerationService.cs
docs/: index.html
docs/css/: animations.css  base.css  components.css  layout.css  variables.css  views.css
docs/js/: api.js  app.js  auth.js  components.js  i18n.js  icons.js  views.js
spearit_crew/: main.py  pyproject.toml
spearit_crew/src/agents/: definitions.py
spearit_crew/src/api/: routes.py
spearit_crew/src/config/: settings.py
spearit_crew/src/crews/: lesson_crew.py  program_crew.py
spearit_crew/src/models/: lesson.py  program.py
spearit_crew/src/spearit_crew.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
spearit_crew/src/tasks/: lesson_tasks.py  program_tasks.py
spearit_crew/src/tools/: fitness_tools.py
